@@ -1,5 +1,6 @@
 2012-05-02  Xavier Perseguers  <xavier@causal.ch>
 
+	* [TASK] Automatically populate organization's website
 	* [TASK] Communities should be sorted alphabetically
 
 2012-05-01  Xavier Perseguers  <xavier@causal.ch>
